--- a/app/views/layouts/_menubar.html.erb
+++ b/app/views/layouts/_menubar.html.erb
@@ -7,7 +7,7 @@
 	  </a>
 	  <ul class="dropdown-menu">
 	    <li><%= link_to 'View', parts_path %></li>
-	    <li><%= link_to 'New', new_sequence_path %></li>	
+	    <li><%= link_to 'New', new_part_path %></li>	
 	  </ul>
   </li>
 	<li class="dropdown">
