--- a/app/assets/stylesheets/protocols.css.scss
+++ b/app/assets/stylesheets/protocols.css.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the Protocols controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#indexDiv {
+height: 400px;
+overflow: auto;
+}
