--- a/app/views/parts/index.html.erb
+++ b/app/views/parts/index.html.erb
@@ -1,26 +1,27 @@
 <h3>parts</h3>
 <p>If your parts do not show up, please COME BACK 5 minutes later, since it would take some time to download data from NCBI </p>
 <p>if your parts never show up, please check if the accession number is correct</p>
-<table class="table table-striped">
-  <tr>
-    <th>#</th>
-    <th>Part Name</th>
-    <th>Protein Accession Number</th>
-    <th>Organism</th>
-    <th>Type</th>
-  </tr>
+<div id="indexDiv">
+  <table class="table table-striped">
+    <tr>
+      <th>#</th>
+      <th>Part Name</th>
+      <th>Protein Accession Number</th>
+      <th>Organism</th>
+      <th>Type</th>
+    </tr>
 
-<% @parts.each do |part| %>
-  <tr>
-    <td><%= part.id %></td>
-    <td><%= part.name %></td>
-    <td><%= part.sequence.accession %></td>
-    <td><%= part.sequence.organism.fullname %></td>
-    <td><%= part.sequence.annotation %></td>
-  </tr>
-<% end %>
-</table>
-
+    <% @parts.each do |part| %>
+      <tr>
+        <td><%= part.id %></td>
+        <td><%= part.name %></td>
+        <td><%= part.sequence.accession %></td>
+        <td><%= part.sequence.organism.fullname %></td>
+        <td><%= part.sequence.annotation %></td>
+      </tr>
+    <% end %>
+  </table>
+</div>
 <br />
 
 <%= link_to 'New Part', new_sequence_path, {:style => 'color: #049cdb;' } %>
