add new_order worker, add Job model

--- a/app/assets/stylesheets/protocols.css.scss
+++ b/app/assets/stylesheets/protocols.css.scss
@@ -5,3 +5,10 @@
 height: 400px;
 overflow: auto;
 }
+#overlapDiv {
+width: 50%;
+height: 200px;
+overflow: auto;
+border: solid 1px;
+word-wrap: break-word;
+}
