--- a/app/views/designs/index.html.erb
+++ b/app/views/designs/index.html.erb
@@ -21,5 +21,5 @@
 </div>
 <br />
 
-<%= link_to 'Export selected design results', '#', {:style => 'color: #049cdb;'} %>
+<%= link_to 'New Design', new_design_path, {:style => 'color: #049cdb;'} %>
 <br><br>
