--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,11 @@
-<div>
-  <h3>Welcome to PartsBuilder</h3>
-  <br><br><br><br>
-</div>
+<h3>Welcome to PartsBuilder</h3>
+<br>
+<h4>How to design your parts</h4><br>
+<b>Solution 1</b><br>
+use "AutoDesign", just input a list of protein/nucleotide accession number, select one protocol, your parts are designed<br><br>
+<b>Solution 2</b><br>
+This solution is useful when different parts use different protocols<br>
+Step 1. Patrs => New, input a list of protein/nucleotide accession number<br>
+Step 2. Designs => New, select one protocol and one or multiple parts to design<br>
+Step 3. Orders => New, select designs to order<br>
+<br><br>
