--- a/app/views/parts/new.html.erb
+++ b/app/views/parts/new.html.erb
@@ -10,7 +10,7 @@
       <td>One id per line<br>e.g.<br>NP_539626.1<br>NP_459636.1<br>P29929.1</td>
     </tr>
     <tr>
-      <td colspan='2'><%= submit_tag("Create Parts") %></td>
+      <td colspan='2'><%= submit_tag("Create Parts", :class => "btn btn-primary") %></td>
     </tr>
   </table>
 <% end %>
