--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,27 +1,28 @@
-<h1>Listing orders</h1>
+<h3>Orders</h3>
 
-<table>
+<table class="table table-striped">
   <tr>
+    <th>#</th>
     <th>Name</th>
     <th>User</th>
     <th>Vendor</th>
-    <th></th>
-    <th></th>
-    <th></th>
+    <th>Result</th>
   </tr>
 
-<% @orders.each do |order| %>
+  <% cnt = 0 %>
+  <% @orders.each do |order| %>
+  <% cnt += 1 %>
   <tr>
+    <td><%= cnt %></td>
     <td><%= order.name %></td>
-    <td><%= order.user_id %></td>
-    <td><%= order.vendor %></td>
-    <td><%= link_to 'Show', order %></td>
-    <td><%= link_to 'Edit', edit_order_path(order) %></td>
-    <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= order.user.fullname %></td>
+    <td><%= order.vendor.name %></td>
+    <td><%= link_to "Download", {:action => :get_zip_file, :id => order.id}, {:style => 'color: #049cdb;'} %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Order', new_order_path %>
+<%= link_to 'New Order', new_order_path, {:style => 'color: #049cdb;'} %>
+<br><br><br>
