--- a/app/views/protocols/new.html.erb
+++ b/app/views/protocols/new.html.erb
@@ -6,8 +6,8 @@
       <td colspan="2"><%= f.text_field :name %></td>
     </tr>
     <tr>
-      <td width="150px" align="center"><%= f.label :organism %></td>
-      <td colspan="2"><%= f.collection_select :organism, Organism.find((1..6).to_a), :code, :fullname %></td>
+      <td width="150px" align="center"><%= f.label :organism_id %></td>
+      <td colspan="2"><%= f.collection_select :organism_id, Organism.find((1..6).to_a), :code, :fullname %></td>
     </tr>
     <tr>
       <td align="center"><%= f.label :ext_prefix, "External Prefix" %></td>
@@ -36,12 +36,22 @@
       <td>Maximum size of sequence, if longer than maximum size, sequence will be carved into fragments</td>
     </tr>
     <tr>
-      <td align="center"><%= f.label :rs_enz, "Forbidden Enzymes" %></td>
-      <td><%= f.text_area :rs_enz, :rows => 5 %></td>
+      <td align="center"><%= f.label :forbid_enzymes, "Forbidden Enzymes" %></td>
+      <td><%= f.text_area :forbid_enzymes, :rows => 5 %></td>
       <td>One enzyme per line, only letters allowed<br>e.g.<br>BsaI<br>BsmBI<br>EcoRI</td>
     </tr>
     <tr>
-      <td colspan="2" align="right"><br><%= f.submit %></td>
+      <td align="center"><%= f.label :check_enzymes, "Check Enzymes" %></td>
+      <td><%= f.text_area :check_enzymes, :rows => 5 %></td>
+      <td>PartBuilder will check if these enzymes in the sequence but not remove them.<br><br> One enzyme per line<br>e.g.<br>BceAI<br>SalI</td>
+    </tr>
+    <tr>
+      <td align="center"><%= f.label :comment %></td>
+      <td><%= f.text_area :comment, :rows => 5 %></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td colspan="2" align="right"><br><%= f.submit :class => "btn btn-primary" %></td>
       <td>&nbsp;</td>
     </tr>
     </table>
