--- a/app/views/protocols/show.html.erb
+++ b/app/views/protocols/show.html.erb
@@ -1,31 +1,18 @@
-<h3>Protocols</h3>
-
-<table class="table table-striped">
-  <tr>
-    <th>#</th>
-    <th>Name</th>
-    <th>Orgnism</th>
-    <th>External Prefix</th>
-    <th>External Suffix</th>
-    <th>Internal Prefix</th>
-    <th>Internal Suffix</th>
-    <th>Size Restriction</th>
-    <th>Forbidden enzymes</th>
-    <th>Overlap</th>
-  </tr>
-
-  <tr>
-    <td><%= @protocol.id %></td>
-    <td><%= @protocol.name %></td>
-    <td><%= @protocol.organism.fullname %></td>
-    <td><%= @protocol.ext_prefix %></td>
-    <td><%= @protocol.ext_suffix %></td>
-    <td><%= @protocol.int_prefix %></td>
-    <td><%= @protocol.int_suffix %></td>
-    <td><%= @protocol.construct_size %></td>
-    <td><%= @protocol.rs_enz %></td>
-    <td><%= @protocol.overlap %></td>
-  </tr>
-</table>
-
+<h3>Protocol <%= @protocol.name %></h3>
+<br>
+<b>Codon Optimization:</b>&nbsp;&nbsp;<%= @protocol.organism.fullname %><br><br>
+<b>External Prefix:</b>&nbsp;&nbsp;<%= @protocol.ext_prefix %><br><br>
+<b>External Suffix:</b>&nbsp;&nbsp;<%= @protocol.ext_suffix %><br><br>
+<b>Internal Prefix:</b>&nbsp;&nbsp;<%= @protocol.int_prefix %><br><br>
+<b>Internal Suffix:</b>&nbsp;&nbsp;<%= @protocol.int_suffix %><br><br>
+<b>Size Restriction:</b>&nbsp;&nbsp;<%= @protocol.construct_size %><br><br>
+<b>Forbidden enzymes:</b>&nbsp;&nbsp;<%= @protocol.forbid_enzymes %><br><br>
+<b>Check enzymes:</b>&nbsp;&nbsp;<%= @protocol.check_enzymes %><br><br>
+<b>Overlap:</b>
+<div id="overlapDiv">
+  <%= @protocol.overlap %>
+</div>
+<br>
+<b>Comment:</b>&nbsp;&nbsp;<%= @protocol.comment %><br><br>
+<%= link_to "Edit Protocol", edit_protocol_path(@protocol.id), {:style => 'color: #049cdb;'} %>
 <br><br>
