--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -4,16 +4,16 @@
     <th>#</th>
     <th>Job Status</th>
     <th>Job Type</th>
+    <th>Errors</th>
     <th>Created_at</th>
     <th>Updated_at</th>
   </tr>
-  <% cnt = 0 %>
   <% @jobs.each do |job| %>
-    <% cnt += 1 %>
     <tr>
-      <td><%= cnt %></td>
+      <td><%= job.id %></td>
       <td><span class="label <%= get_status_label_style(job.job_status.name)%>"><%= job.job_status.name %></span></td>
-      <td><%= job.job_type.name %></td>
+      <td><span class="<%= get_type_style(job.job_type.name)%>"><%= job.job_type.name %></span></td>
+      <td><%= job.error_info || 'none' %></td>
       <td><%= job.created_at %></td>
       <td><%= job.updated_at %></td>
     </tr>
