--- a/app/views/parts/index.html.erb
+++ b/app/views/parts/index.html.erb
@@ -1,28 +1,32 @@
 <h3>parts</h3>
 <b>Filter:</b> <%= text_field_tag :filter %>
-<%= javascript_tag "Tables_setLiveFilter('#parts','input#filter')" %>
 <div id="indexDiv">
-  <table class="table table-striped" id="parts">
-    <tr>
-      <th>#</th>
-      <th>Part Name</th>
-      <th>Protein Accession Number</th>
-      <th>Organism</th>
-      <th>Type</th>
-    </tr>
-
-    <% @parts.each do |part| %>
+  <table class="tablesorter-blue" id="sortable-table">
+    <thead>
       <tr>
-        <td><%= part.id %></td>
-        <td><%= part.name %></td>
-        <td><%= part.sequence.accession %></td>
-        <td><%= part.sequence.organism.fullname %></td>
-        <td><%= part.sequence.annotation %></td>
+        <th>#</th>
+        <th>Part Name</th>
+        <th>Protein Accession Number</th>
+        <th>Organism</th>
+        <th>Type</th>
+        <th>Created_at</th>
       </tr>
-    <% end %>
+    </thead>
+    <tbody>
+      <% @parts.each do |part| %>
+        <tr>
+          <td><%= part.id %></td>
+          <td><%= part.name %></td>
+          <td><%= part.sequence.accession %></td>
+          <td><%= part.sequence.organism.fullname %></td>
+          <td><%= part.sequence.annotation %></td>
+          <td><%= part.created_at %></td>
+        </tr>
+      <% end %>
+    </tbody>
   </table>
 </div>
 <br />
 
-<%= link_to 'New Part', new_sequence_path, {:style => 'color: #049cdb;' } %>
+<%= link_to 'New Part', new_part_path, {:style => 'color: #049cdb;' } %>
 <br><br>
