--- a/app/views/protocols/index.html.erb
+++ b/app/views/protocols/index.html.erb
@@ -1,31 +1,34 @@
 <h3>Protocols</h3>
 
-<table class="table table-striped">
-  <tr>
-    <th>#</th>
-    <th>Name</th>
-    <th>External Prefix</th>
-    <th>External Suffix</th>
-    <th>Internal Prefix</th>
-    <th>Internal Suffix</th>
-    <th>Size Restriction</th>
-    <th>Forbidden enzymes</th>
-    <th>Check enzymes</th>
-  </tr>
-
-  <% @protocols.each do |protocol| %>
+<table class="tablesorter-blue" id="sortable-table">
+  <thead>
     <tr>
-      <td><%= protocol.id %></td>
-      <td><%= link_to protocol.name, protocol_path(protocol.id), {:style => 'color: #049cdb;'} %></td>
-      <td><%= protocol.ext_prefix %></td>
-      <td><%= protocol.ext_suffix %></td>
-      <td><%= protocol.int_prefix %></td>
-      <td><%= protocol.int_suffix %></td>
-      <td><%= protocol.construct_size %></td>
-      <td><%= protocol.forbid_enzymes %></td>
-      <td><%= protocol.check_enzymes %></td>
+      <th>#</th>
+      <th>Name</th>
+      <th>External Prefix</th>
+      <th>External Suffix</th>
+      <th>Internal Prefix</th>
+      <th>Internal Suffix</th>
+      <th>Size Restriction</th>
+      <th>Forbidden enzymes</th>
+      <th>Check enzymes</th>
     </tr>
-  <% end %>
+  </thead>
+  <tbody>
+    <% @protocols.each do |protocol| %>
+      <tr>
+        <td><%= protocol.id %></td>
+        <td><%= link_to protocol.name, protocol_path(protocol.id), {:style => 'color: #049cdb;'} %></td>
+        <td><%= protocol.ext_prefix %></td>
+        <td><%= protocol.ext_suffix %></td>
+        <td><%= protocol.int_prefix %></td>
+        <td><%= protocol.int_suffix %></td>
+        <td><%= protocol.construct_size %></td>
+        <td><%= protocol.forbid_enzymes %></td>
+        <td><%= protocol.check_enzymes %></td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
 <br />
 
