add live search, add basic interface for autoBuild

--- a/app/views/designs/index.html.erb
+++ b/app/views/designs/index.html.erb
@@ -1,5 +1,6 @@
 <h3>Designs</h3>
 
+<b>Filter:</b><%= text_field_tag :search %>
 <div id="indexDiv">
   <table class="tablesorter-blue" id="sortable-table">
     <thead>
