--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 <br>
 <h4>How to design your parts</h4><br>
 <b>Solution 1</b><br>
-use "AutoDesign", just input a list of protein/nucleotide accession number, select one protocol, your parts are designed<br><br>
+use "AutoBuild", just input your protein list, one click, your parts designed<br><br>
 <b>Solution 2</b><br>
 This solution is useful when different parts use different protocols<br>
 Step 1. Patrs => New, input a list of protein/nucleotide accession number<br>
