--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,5 +1,6 @@
 <h3>Orders</h3>
 
+<b>Filter:</b><%= text_field_tag :search %>
 <table class="tablesorter-blue" id="sortable-table">
   <thead>
     <tr>
