--- a/app/views/parts/index.html.erb
+++ b/app/views/parts/index.html.erb
@@ -1,5 +1,5 @@
 <h3>parts</h3>
-<b>Filter:</b> <%= text_field_tag :filter %>
+<b>Filter:</b><%= text_field_tag :search %>
 <div id="indexDiv">
   <table class="tablesorter-blue" id="sortable-table">
     <thead>
