--- a/app/views/layouts/_menubar.html.erb
+++ b/app/views/layouts/_menubar.html.erb
@@ -1,6 +1,6 @@
 <ul class="nav">
   <!-- Workspace menu -->
-  <li><a>Auto Build</a><li>
+  <li><a href="/auto_builds/new">AutoBuild</a><li>
   <li class="dropdown">
   <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="#">
     Parts
