--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -12,6 +12,7 @@
     </tr>
   </table>
   <h5> Select designs: </h5> 
+  <b>Filter:</b><%= text_field_tag :search %>
   <div id="newDiv">
     <table class="tablesorter-blue" id="sortable-table">
       <thead>
