minor change, improve interface

--- a/app/views/designs/index.html.erb
+++ b/app/views/designs/index.html.erb
@@ -2,7 +2,7 @@
 
 <b>Filter:</b><%= text_field_tag :search %>
 <div id="indexDiv">
-  <table class="tablesorter-blue" id="sortable-table">
+  <table class="tablesorter-default" id="sortable-table">
     <thead>
       <tr>
         <th>#</th>
