--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,5 +1,5 @@
 <h3>Jobs</h3>
-<table class="tablesorter-blue" id="sortable-table">
+<table class="tablesorter-default" id="sortable-table">
   <thead>
     <tr>
       <th>#</th>
