--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,7 +1,7 @@
 <h3>Orders</h3>
 
 <b>Filter:</b><%= text_field_tag :search %>
-<table class="tablesorter-blue" id="sortable-table">
+<table class="tablesorter-default" id="sortable-table">
   <thead>
     <tr>
       <th>#</th>
