--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <h3>User Info</h3>
 
-<table class="tablesorter-blue">
+<table class="table table-stripped">
   <tr>
     <th>Fullname</th>
     <th>Email</th>
