--- a/app/views/auto_builds/new.html.erb
+++ b/app/views/auto_builds/new.html.erb
@@ -1,13 +1,10 @@
 <h3>Design your parts</h3>
 <%= form_tag({:controller => "auto_builds", :action => "create"}, :method => "post") do %>
+  <h5> Please Input Protein/Nucleotide Accession Number: </h5>
   <table>
     <tr>
-      <td width="100px"><%= label_tag :order_name %></td>
-      <td><%= text_field_tag :order_name %></td>
-    </tr>
-    <tr>
-      <td width="100px"><%= label_tag :vendor_id, "Vendor" %></td>
-      <td><%= collection_select :order, :vendor_id, Vendor.all, :id, :name %></td>
+      <td><%= text_area_tag(:accession, "", :size => "50x10")%></td>
+      <td>One id per line<br>e.g.<br>NP_539626.1<br>NP_459636.1<br>P29929.1</td>
     </tr>
   </table>
 
@@ -20,13 +17,20 @@
       </tr>
     <% end %>
   </table>
-
-  <h5> Please Input Protein/Nucleotide Accession Number: </h5>
+  <br>
+  
+  <h5> Input order information: </h5>
   <table>
     <tr>
-      <td><%= text_area_tag(:accession, "", :size => "50x10")%></td>
-      <td>One id per line<br>e.g.<br>NP_539626.1<br>NP_459636.1<br>P29929.1</td>
+      <td width="100px"><%= label_tag :order_name %></td>
+      <td><%= text_field_tag :order_name %></td>
+    </tr>
+    <tr>
+      <td width="100px"><%= label_tag :vendor_id, "Vendor" %></td>
+      <td><%= collection_select :order, :vendor_id, Vendor.all, :id, :name %></td>
     </tr>
   </table>
+  <br>
+
   <%= submit_tag("Create Parts", :class => "btn btn-primary") %>
 <% end %>
