--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -14,7 +14,7 @@
   <h5> Select designs: </h5> 
   <b>Filter:</b><%= text_field_tag :search %>
   <div id="newDiv">
-    <table class="tablesorter-blue" id="sortable-table">
+    <table class="tablesorter-default" id="sortable-table">
       <thead>
         <tr>
           <th></th>
