--- a/app/views/protocols/index.html.erb
+++ b/app/views/protocols/index.html.erb
@@ -1,6 +1,6 @@
 <h3>Protocols</h3>
 
-<table class="tablesorter-blue" id="sortable-table">
+<table class="tablesorter-default" id="sortable-table">
   <thead>
     <tr>
       <th>#</th>
