add retrieve nucleotide accession function to worker. modify deploy to skip precompile assets if no change

--- a/app/views/parts/index.html.erb
+++ b/app/views/parts/index.html.erb
@@ -15,7 +15,7 @@
     <tbody>
       <% @parts.each do |part| %>
         <tr>
-          <td><%= part.id %></td>
+					<td><%= link_to part.id, part_path(part.id), {:style => 'color: #049cdb;' } %></td>
           <td><%= part.name %></td>
           <td><%= part.sequence.accession %></td>
           <td><%= part.sequence.organism.fullname %></td>
