--- a/app/views/parts/show.html.erb
+++ b/app/views/parts/show.html.erb
@@ -1,10 +1,14 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Name:</b>
-  <%= @part.name %>
+  <b>Name:</b> <%= @part.name %> 
+	<br><br>
+	<b>Sequence:</b>
+	<div id="seq">
+	  <%= @part.sequence.seq%>
+	</div>
 </p>
 
 
-<%= link_to 'Edit', edit_part_path(@part) %> |
+<%= link_to 'Edit', edit_part_path(@part), {:style => 'color: #049cdb;'} %> |
 <%= link_to 'Back', parts_path %>
