--- a/app/assets/stylesheets/parts.css.scss
+++ b/app/assets/stylesheets/parts.css.scss
@@ -5,3 +5,10 @@
 height: 300px;
 overflow: auto;
 }
+#seq {
+border: 1px solid; 
+width: 50%; 
+height: 150px; 
+word-wrap: break-word;
+overflow: auto;
+}
