--- a/app/views/parts/new.html.erb
+++ b/app/views/parts/new.html.erb
@@ -1,18 +1,33 @@
 <h3>New part</h3>
 
-<%= form_tag({:controller => "parts", :action => "create"}, :method => "post") do %>
-  <table>
-    <tr>
-      <td colspan='2'><%= label_tag(:accession, "Protein/Nucleotide Accession Number:") %></td>
-    </tr>
-    <tr>
-      <td><%= text_area_tag(:accession, "", :size => "50x10")%></td>
-      <td>One id per line<br>e.g.<br>NP_539626.1<br>NP_459636.1<br>P29929.1</td>
-    </tr>
-    <tr>
-      <td colspan='2'><%= submit_tag("Create Parts", :class => "btn btn-primary") %></td>
-    </tr>
-  </table>
+<%= form_tag({:controller => "parts", :action => "create"}, :method => "post", :multipart => true) do %>
+	<table>
+		<tr>
+			<td colspan='2'><%= label_tag(:accession, "Input Protein/Nucleotide Accession Number:") %></td>
+		</tr>
+		<tr>
+			<td><%= text_area_tag(:accession, "", :size => "50x10")%></td>
+			<td>One id per line<br>e.g.<br>NP_539626.1<br>NP_459636.1<br>P29929.1</td>
+		</tr>
+		<tr>
+			<td colspan='2'>&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan='2'><b>Or Upload a Fasta File of Protein Sequences:</b></td>
+		</tr>
+		<tr>
+			<td colspan='2'><%= file_field_tag(:sequence_file)%></td>
+		</tr>
+		<tr>
+			<td colspan='2'>Important: special format required, see <%= link_to 'description', {:action => :get_description_file, :name => 'description.txt', :type => 'text'}, {:style => 'color: #049cdb;'} %></td>
+		</tr>
+		<tr>
+			<td colspan='2'>&nbsp;</td>
+		</tr>
+		<tr>
+			<td colspan='2'><%= submit_tag("Create Parts", :class => "btn btn-primary") %></td>
+		</tr>
+	</table>
 <% end %>
 
 
