--- a/app/views/designs/new.html.erb
+++ b/app/views/designs/new.html.erb
@@ -30,7 +30,7 @@
             <td><%= f.check_box(:part_id, {:multiple => true}, part.id, nil) %></td>
             <td><%= part.name %></td>
             <td><%= part.sequence.accession %></td>
-            <td><%= part.sequence.organism.fullname %></td>
+						<td><%= begin; part.sequence.organism.fullname; rescue; "Unknown"; end %></td>
             <td><%= part.created_at %></td>
           </tr>
         <% end %>
