change protocols to design standard

--- a/app/views/auto_builds/new.html.erb
+++ b/app/views/auto_builds/new.html.erb
@@ -12,7 +12,7 @@
 	<p>Important: special format required, see <%= link_to 'description', {:action => :get_description_file, :name => 'description.txt', :type => 'text'}, {:style => 'color: #049cdb;'} %></p>
   <br>
 
-  <h5> 2. Select one protocol: </h5>
+  <h5> 2. Select one design standard: </h5>
   <table>
     <% @protocols.each do |protocol| %>
       <tr>
