--- a/app/views/designs/index.html.erb
+++ b/app/views/designs/index.html.erb
@@ -7,7 +7,7 @@
       <tr>
         <th>#</th>
         <th>Part</th>
-        <th>Protocol</th>
+        <th>Design Standard</th>
         <th>Result</th>
         <th>Created_at</th>
       </tr>
