--- a/app/views/layouts/_menubar.html.erb
+++ b/app/views/layouts/_menubar.html.erb
@@ -33,7 +33,7 @@
   </li>
   <li class="dropdown">
   <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="#">
-    Protocols
+   Design Standards
     <b class="caret"></b>
   </a>
   <ul class="dropdown-menu">
