--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -19,7 +19,7 @@
         <tr>
           <th></th>
           <th>Part Name</th>
-          <th>Protocol</th>
+          <th>Design Standard</th>
           <th>Created_at</th>
         </tr>
       </thead>
