--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,10 +2,10 @@
 <br>
 <h4>How to design your parts</h4><br>
 <b>Solution 1</b><br>
-use "AutoBuild", just input your protein list, one click, your parts designed<br><br>
+The simplest way: go to "AutoBuild", fill out all required information, one click, your parts designed<br><br>
 <b>Solution 2</b><br>
-This solution is useful when different parts use different protocols<br>
-Step 1. Patrs => New, input a list of protein/nucleotide accession number<br>
-Step 2. Designs => New, select one protocol and one or multiple parts to design<br>
+A more flexible way to handle your data: <br>
+Step 1. Parts => New, input a list of protein/nucleotide accession number<br>
+Step 2. Designs => New, select one design standard and one or more parts to design<br>
 Step 3. Orders => New, select designs to order<br>
 <br><br>
