--- a/app/views/protocols/index.html.erb
+++ b/app/views/protocols/index.html.erb
@@ -1,4 +1,4 @@
-<h3>Protocols</h3>
+<h3>Design Standards</h3>
 
 <table class="tablesorter-default" id="sortable-table">
   <thead>
@@ -32,5 +32,5 @@
 </table>
 <br />
 
-<%= link_to 'New Protocol', new_protocol_path, {:style => 'color: #049cdb;'} %>
+<%= link_to 'New Design Standard', new_protocol_path, {:style => 'color: #049cdb;'} %>
 <br><br>
