--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,6 +4,7 @@
   <tr>
     <th>Fullname</th>
     <th>Email</th>
+    <th>Group</th>
     <th>Provider</th>
     <th></th>
   </tr>
@@ -11,6 +12,7 @@
   <tr>
     <td><%= @user.fullname %></td>
     <td><%= @user.email %></td>
+    <td><%= @user.group.name %></td>
     <td><%= @user.provider %></td>
     <td><%= link_to 'Edit', edit_user_path(@user), {:style => 'color: #049cdb;'} %></td>
   </tr>
