--- a/app/views/admin/protocols/index.html.erb
+++ b/app/views/admin/protocols/index.html.erb
@@ -18,7 +18,7 @@
     <% @protocols.each do |protocol| %>
       <tr>
         <td><%= protocol.id %></td>
-        <td><%= link_to protocol.name, protocol_path(protocol.id), {:style => 'color: #049cdb;'} %></td>
+        <td><%= link_to protocol.name, admin_protocol_path(protocol.id), {:style => 'color: #049cdb;'} %></td>
         <td><%= protocol.ext_prefix %></td>
         <td><%= protocol.ext_suffix %></td>
         <td><%= protocol.int_prefix %></td>
@@ -32,4 +32,5 @@
 </table>
 <br />
 
+<%= link_to 'New Design Standard', new_admin_protocol_path, {:style => 'color: #049cdb;'} %>
 <br><br>
