--- a/app/views/admin/protocols/show.html.erb
+++ b/app/views/admin/protocols/show.html.erb
@@ -14,4 +14,5 @@
 </div>
 <br>
 <b>Comment:</b>&nbsp;&nbsp;<%= @protocol.comment %><br><br>
+<%= link_to "Edit Design Standard", edit_admin_protocol_path(@protocol.id), {:style => 'color: #049cdb;'} %>
 <br><br>
