--- a/app/views/admin/protocols/edit.html.erb
+++ b/app/views/admin/protocols/edit.html.erb
@@ -1,5 +1,5 @@
 <h3>Edit design standard </h3>
-<%= form_for(@protocol) do |f| %>
+<%= form_for [:admin,@protocol] do |f| %>
   <table>
     <tr>
       <td width="150px" align="center"><%= f.label :name %></td>
