--- a/app/views/partsbuilder_mailer/finished_notice.html.erb
+++ b/app/views/partsbuilder_mailer/finished_notice.html.erb
@@ -5,7 +5,7 @@
   </head>
   <body>
     <b>Dear <%= @user.fullname %></b><br><br>
-    Your PartsBuilder job is finished.  Please go to <a href="http://54.235.254.95:8080" target="_blank">http://www.partsbuilder.com</a> to view results.<br><br>
+    Your PartsBuilder job is finished.  Please go to <a href="http://www.biopartsbuilder.org" 0target="_blank">http://www.biopartsbuilder.org</a> to view results.<br><br>
     Thanks for using PartsBuilder<br>
     Bader Group<br><br>
     ==================================================<br>
