--- a/app/views/partsbuilder_mailer/finished_notice.text.erb
+++ b/app/views/partsbuilder_mailer/finished_notice.text.erb
@@ -1,6 +1,6 @@
 Dear <%= @user.fullname %>
 
-   Your PartsBuilder job is finished.  Please go to http://www.partsbuilder.com to view results.
+   Your PartsBuilder job is finished.  Please go to http://www.biopartsbuilder.org to view results.
 
    Thanks for using PartsBuilder
    Bader Group
