add confirm page to auto_builds

--- a/app/views/auto_builds/new.html.erb
+++ b/app/views/auto_builds/new.html.erb
@@ -1,5 +1,5 @@
 <h3>Design your parts</h3>
-<%= form_tag({:controller => "auto_builds", :action => "create"}, :method => "post", :multipart => true) do %>
+<%= form_tag({:controller => "auto_builds", :action => "confirm"}, :method => "post", :multipart => true) do %>
   <h5> 1. Please Input Protein/Nucleotide Accession Number: </h5>
   <table>
     <tr>
