--- a/app/views/partsbuilder_mailer/finished_notice.html.erb
+++ b/app/views/partsbuilder_mailer/finished_notice.html.erb
@@ -5,7 +5,11 @@
   </head>
   <body>
     <b>Dear <%= @user.fullname %></b><br><br>
-    Your PartsBuilder job is finished.  Please go to <a href="http://www.biopartsbuilder.org" 0target="_blank">http://www.biopartsbuilder.org</a> to view results.<br><br>
+    <% if @error.nil? %>
+      Your PartsBuilder job is finished.  Please go to <a href="http://www.biopartsbuilder.org" target="_blank">http://www.biopartsbuilder.org</a> to view results.<br><br>
+    <% else %>
+      There is something wrong when handling your data. The error information is "<%= @error%>".  Please go to <a href="http://www.biopartsbuilder.org" target="_blank">http://www.biopartsbuilder.org</a> to check your jobs.<br><br>
+    <% end %>
     Thanks for using PartsBuilder<br>
     Bader Group<br><br>
     ==================================================<br>
